--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,18 @@ input[type="number"] {
     border-radius: 4px;
 }
 
+.select_category {
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 4px;
+}
+
+.update_category {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 5px;
+}
+
 button {
     padding: 10px;
     background-color: #3498db;
@@ -112,4 +124,10 @@ tr:nth-child(even) {
 
 .acao-container form:last-of-type button:hover {
     background-color: #c0392b;
+}
+
+tr.alerta-estoque-baixo {
+    background-color: #c00505 !important;
+    color: white !important;
+    font-weight: bold;
 }
